try to fix more errors